# notelock

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py
app/core/: db.py  settings.py
app/helpers/: auto_deletion.py  crypto.py
app/models/: note.py
app/routers/: notes.py
app/schemas/: note.py
