[project]
name = "notelock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=45.0.4",
    "fastapi-limiter>=0.1.6",
    "fastapi[standard]>=0.115.12",
    "odmantic>=1.0.2",
    "pydantic-settings>=2.9.1",
]
